--- a/css.html
+++ b/css.html
@@ -1,16 +1,27 @@
 <style>
+    /* Version: 1.3.0 */
     :root {
-        --md-sys-color-primary: #005ac1;
-        --md-sys-color-on-primary: #ffffff;
-        --md-sys-color-primary-container: #d8e2ff;
-        --md-sys-color-on-primary-container: #001a41;
+        --md-sys-color-primary: #32CD32;
+        --md-sys-color-on-primary: #000000;
+        --md-sys-color-primary-container: #b8f397;
+        --md-sys-color-on-primary-container: #002200;
+        --md-sys-color-tertiary-container: #E0F2F1;
+        /* Fresh Mint for matrix */
+        --md-sys-color-on-tertiary-container: #1b5e20;
+
         --md-sys-color-background: #fdfbff;
         --md-sys-color-on-background: #1a1b1e;
         --md-sys-color-surface: #fdfbff;
         --md-sys-color-on-surface: #1a1b1e;
         --md-sys-color-outline: #74777f;
+        --md-sys-color-outline-variant: #c4c7c5;
+        --md-sys-color-surface-variant: #e1e3e1;
+        /* Added for sticky header */
+        --md-sys-color-secondary: #625b71;
 
         --md-ref-typeface-brand: 'Roboto', sans-serif;
+        --md-sys-elevation-1: 0 1px 2px rgba(0, 0, 0, 0.3), 0 1px 3px 1px rgba(0, 0, 0, 0.15);
+        --md-sys-elevation-3: 0 4px 8px 3px rgba(0, 0, 0, 0.15), 0 1px 3px rgba(0, 0, 0, 0.3);
     }
 
     body {
@@ -18,167 +29,489 @@
         font-family: var(--md-ref-typeface-brand);
         background-color: var(--md-sys-color-background);
         color: var(--md-sys-color-on-background);
-        padding-bottom: 80px;
-        /* Space for FAB */
+        padding-bottom: 90px;
+        /* Space for FAB/Footer */
     }
 
     /* App Bar */
     .md3-top-app-bar {
-        background-color: var(--md-sys-color-surface);
-        color: var(--md-sys-color-on-surface);
-        padding: 12px 16px;
-        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+        background-color: var(--md-sys-color-primary);
+        color: var(--md-sys-color-on-primary);
+        padding: 0 16px;
+        height: 64px;
+        display: flex;
+        align-items: center;
         position: sticky;
         top: 0;
-        z-index: 100;
+        z-index: 1000;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        box-sizing: border-box;
+        /* Ensure padding doesn't overflow */
     }
 
-    .md3-headline-medium {
-        margin: 0;
-        font-size: 22px;
-        font-weight: 500;
-    }
-
-    /* Container */
-    .md3-container {
-        padding: 16px;
-        max-width: 600px;
+    .md3-top-app-bar__content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        max-width: 900px;
         margin: 0 auto;
     }
 
-    /* Cards */
-    .md3-card {
-        background-color: var(--md-sys-color-surface);
-        border-radius: 12px;
-        box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.15);
-        margin-bottom: 16px;
-        overflow: hidden;
-        border: 1px solid #e0e0e0;
-    }
-
-    .card-content {
-        padding: 16px;
-    }
-
-    .md3-title-large {
-        font-size: 18px;
-        margin: 0 0 8px 0;
-    }
-
-    .md3-body-medium {
-        font-size: 14px;
-        color: #49454f;
+    .md3-headline-medium {
+        font-size: 22px;
+        line-height: 28px;
+        font-weight: 400;
         margin: 0;
     }
 
-    /* Inputs */
-    .qty-input-group {
-        display: flex;
-        gap: 12px;
-        margin-top: 12px;
-        align-items: center;
+    .md3-title-large {
+        font-size: 22px;
+        font-weight: 400;
+        margin: 0;
     }
 
-    .md3-text-field {
-        position: relative;
-        flex: 1;
-    }
-
-    .md3-text-field input {
-        width: 100%;
-        padding: 12px;
-        border: 1px solid var(--md-sys-color-outline);
-        border-radius: 4px;
-        font-size: 16px;
+    .md3-container {
+        padding: 16px;
+        max-width: 900px;
+        margin: 0 auto;
         box-sizing: border-box;
-    }
-
-    .md3-text-field label {
-        position: absolute;
-        top: -8px;
-        left: 10px;
-        background: white;
-        padding: 0 4px;
-        font-size: 12px;
-        color: var(--md-sys-color-outline);
-    }
-
-    /* Buttons */
-    .md3-btn-filled {
-        background-color: var(--md-sys-color-primary);
-        color: var(--md-sys-color-on-primary);
-        border: none;
-        border-radius: 20px;
-        padding: 10px 24px;
-        font-size: 14px;
-        font-weight: 500;
-        cursor: pointer;
-        width: 100%;
-    }
-
-    .md3-btn-filled:disabled {
-        background-color: #1a1b1e1f;
-        color: #1a1b1e61;
-    }
-
-    /* State Views */
-    .state-view {
-        text-align: center;
-        padding: 40px 0;
     }
 
     .hidden {
         display: none !important;
     }
 
-    .loader {
-        border: 4px solid #f3f3f3;
-        border-top: 4px solid var(--md-sys-color-primary);
-        border-radius: 50%;
-        width: 40px;
-        height: 40px;
-        animation: spin 1s linear infinite;
-        display: inline-block;
+    /* Inputs (Text Field) */
+    /* Inputs (Text Field - Floating Label) */
+    .md3-text-field {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 16px;
+        background-color: #f0f4f8;
+        /* Light gray background for container */
+        border-radius: 4px 4px 0 0;
+        border-bottom: 1px solid var(--md-sys-color-outline);
     }
 
-    @keyframes spin {
+    .md3-text-field:focus-within {
+        border-bottom: 2px solid var(--md-sys-color-primary);
+    }
+
+    .md3-text-field input {
+        width: 100%;
+        padding: 24px 16px 8px 16px;
+        /* PT space for label */
+        border: none;
+        background: transparent;
+        font-family: var(--md-ref-typeface-brand);
+        font-size: 16px;
+        color: var(--md-sys-color-on-surface);
+        box-sizing: border-box;
+        outline: none;
+    }
+
+    .md3-text-field label {
+        position: absolute;
+        left: 16px;
+        top: 16px;
+        /* Centered initially (approx) */
+        font-size: 16px;
+        color: var(--md-sys-color-secondary);
+        font-weight: 400;
+        pointer-events: none;
+        transition: 0.2s ease all;
+    }
+
+    /* Floating State */
+    .md3-text-field input:focus~label,
+    .md3-text-field input:not(:placeholder-shown)~label {
+        top: 4px;
+        font-size: 12px;
+        color: var(--md-sys-color-primary);
+        font-weight: 500;
+    }
+
+    .md3-btn-filled {
+        background-color: var(--md-sys-color-primary);
+        color: var(--md-sys-color-on-primary);
+        border: none;
+        border-radius: 100px;
+        padding: 10px 24px;
+        font-size: 14px;
+        font-weight: 500;
+        cursor: pointer;
+        font-family: var(--md-ref-typeface-brand);
+    }
+
+    .state-view {
+        text-align: center;
+        padding: 40px 0;
+    }
+
+    .loading-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(255, 255, 255, 0.9);
+        z-index: 9999;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .loader {
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+        border: 5px solid #fff;
+        border-bottom-color: #FF3D00;
+        animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
         0% {
             transform: rotate(0deg);
+            border-bottom-color: #FF3D00;
+        }
+
+        50% {
+            border-bottom-color: #00E676;
         }
 
         100% {
             transform: rotate(360deg);
+            border-bottom-color: #FF3D00;
         }
     }
 
-    .error-icon {
-        color: #ba1a1a;
-        font-size: 48px;
+    /* CATEGORY & PRODUCT LIST STYLES */
+
+    /* Details/Summary */
+    .category-details,
+    .product-group-details {
+        margin-bottom: 8px;
     }
 
-    .success-icon {
-        color: #2e7d32;
-        font-size: 48px;
+    .category-details>summary {
+        list-style: none;
+        margin: 24px 0 12px 0;
+        padding: 8px;
+        font-size: 20px;
+        font-weight: 500;
+        cursor: pointer;
+        border-bottom: 2px solid var(--md-sys-color-outline-variant);
     }
 
-    /* Sticky Footer */
-    .fab-container {
+    /* SALES & DETAILS STYLES */
+    .sale-badge {
+        background-color: #FF3D00;
+        color: white;
+        padding: 2px 6px;
+        border-radius: 4px;
+        font-size: 10px;
+        font-weight: 700;
+        margin-left: 8px;
+        text-transform: uppercase;
+        vertical-align: middle;
+    }
+
+    .original-price-strikethrough {
+        text-decoration: line-through;
+        color: #999;
+        font-size: 0.9em;
+        margin-right: 4px;
+    }
+
+    .sale-price-highlight {
+        color: #D32F2F;
+        /* Red for emphasis */
+        font-weight: 700;
+    }
+
+    /* Info Icon */
+    .info-icon {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        width: 18px;
+        height: 18px;
+        border-radius: 50%;
+        background-color: #e0e0e0;
+        color: #666;
+        font-size: 12px;
+        font-weight: bold;
+        margin-left: 6px;
+        cursor: pointer;
+        user-select: none;
+    }
+
+    .info-icon:hover {
+        background-color: #bdbdbd;
+        color: #333;
+    }
+
+    /* Details Bubble (Popover) */
+    .details-bubble {
         position: fixed;
-        bottom: 0;
-        left: 0;
-        right: 0;
+        z-index: 1000;
         background: white;
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        border: 1px solid #eee;
+        width: 300px;
+        max-width: 90vw;
         padding: 16px;
-        box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+        display: none;
+        /* Hidden by default */
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        /* Centered Modal style for mobile friendliness */
+    }
+
+    .bubble-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.3);
+        z-index: 999;
+        display: none;
+    }
+
+    .details-img-container {
+        width: 100%;
+        height: 200px;
+        background-color: #f5f5f5;
+        border-radius: 8px;
+        overflow: hidden;
+        margin-bottom: 12px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .details-img {
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: contain;
+    }
+
+    .details-title {
+        font-size: 18px;
+        font-weight: bold;
+        margin-bottom: 8px;
+    }
+
+    .details-desc {
+        font-size: 14px;
+        color: #555;
+        line-height: 1.4;
+        margin-bottom: 12px;
+    }
+
+    .product-group-details {
+        border-radius: 8px;
+        background-color: var(--md-sys-color-surface);
+        box-shadow: var(--md-sys-elevation-1);
+        overflow: visible;
+        /* Needed for sticky */
+        border: 1px solid #e0e0e0;
+        margin-left: 8px;
+        margin-right: 8px;
+    }
+
+    .product-group-details[open] {
+        box-shadow: var(--md-sys-elevation-3);
+        margin-bottom: 16px;
+    }
+
+    .product-group-details>summary {
+        list-style: none;
+        padding: 16px;
+        font-weight: 500;
+        cursor: pointer;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        gap: 16px;
-        max-width: 600px;
-        margin: 0 auto;
+        border-radius: 8px;
+        background-color: var(--md-sys-color-surface);
+        /* Clean White/Surface when closed */
+        transition: background-color 0.2s ease;
+
+        /* STICKY WATERFALL HEADER RESTORED */
+        position: sticky;
+        top: 64px;
+        /* Below App Bar */
+        z-index: 20;
+        /* Higher than content */
     }
 
-    .total-preview {
+    .product-group-details[open]>summary {
+        /* Force dynamic color when open */
+        background-color: var(--category-color, #e0e0e0) !important;
+        color: #000;
+        border-bottom-left-radius: 0;
+        border-bottom-right-radius: 0;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        /* Ensure shadow on sticky */
+        box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    }
+
+    /* MISSING HEADER LAYOUT FIXED */
+    .header-content {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        gap: 12px;
+        /* Match grid-data-row gap */
+    }
+
+    /* Important: Match .col-data properties */
+    .header-expanded-content {
+        display: flex;
+        flex-direction: row;
+        gap: 12px;
+        /* Match grid-data-row gap */
+        align-items: center;
+    }
+
+    .header-expanded-content .col-data {
+        /* Ensure header cols use same flex props as body cols */
+        flex: 0 0 auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 80px;
+        /* Fixed Width for Alignment */
+        min-width: 80px;
+        text-align: center;
+        font-size: 13px;
+        /* Slightly smaller header text */
+        font-weight: 500;
+        line-height: 1.2;
+    }
+
+    .product-content {
+        padding: 0;
+        /* Content flush */
+    }
+
+    /* PRODUCT ROW LAYOUT (Flexbox Grid) */
+    .table-container {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        overflow-x: auto;
+    }
+
+    .grid-data-row {
+        display: flex !important;
+        flex-direction: row !important;
+        flex-wrap: nowrap !important;
+        align-items: center;
+        justify-content: space-between;
+        padding: 12px 16px;
+        border-bottom: 1px solid var(--md-sys-color-outline-variant);
+        gap: 12px;
+        width: 100%;
+        box-sizing: border-box;
+        background-color: var(--md-sys-color-surface);
+    }
+
+    .grid-data-row:last-child {
+        border-bottom: none;
+    }
+
+    .col-name {
+        flex: 1;
+        /* Takes most space */
+        min-width: 120px;
+        /* Ensure name has space */
+        /* truncate */
+        font-weight: 500;
+        text-align: left;
+        white-space: normal;
+        padding-right: 8px;
+    }
+
+    .col-data {
+        flex: 0 0 auto;
+        /* Do not grow/shrink */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 80px;
+        /* Fixed Width for Alignment */
+        min-width: 80px;
+        /* Ensure space for input/price */
+    }
+
+    .table-input {
+        width: 60px;
+        height: 36px;
+        text-align: center;
+        border: 1px solid var(--md-sys-color-outline);
+        border-radius: 4px;
         font-size: 16px;
+    }
+
+    .price-sub {
+        font-size: 0.8em;
+        color: var(--md-sys-color-secondary);
+    }
+
+    /* Fixed FAB (Collapse Button) */
+    .md3-fab-fixed {
+        position: fixed;
+        bottom: 24px;
+        right: 24px;
+        width: 56px;
+        height: 56px;
+        border-radius: 16px;
+        background-color: var(--md-sys-color-primary-container);
+        color: var(--md-sys-color-on-primary-container);
+        border: none;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        cursor: pointer;
+        display: flex !important;
+        /* Force Display */
+        align-items: center;
+        justify-content: center;
+        z-index: 2000;
+    }
+
+    .md3-fab-fixed:hover {
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.25);
+    }
+
+    /* Matrix Styles */
+    .matrix-scroll-view {
+        overflow-x: auto;
+    }
+
+    .matrix-header-row {
+        display: flex;
+        position: sticky;
+        top: 0;
+        background-color: var(--md-sys-color-surface-variant);
+        z-index: 5;
+        font-weight: bold;
+        padding: 8px 16px;
+    }
+
+    .matrix-name-col {
+        width: 150px;
+        flex: none;
     }
 </style>
