UI Fix: Rounded corners and Sale Logic Support (v1.3.2)

--- a/css.html
+++ b/css.html
@@ -430,7 +430,10 @@
 
     .grid-data-row:last-child {
         border-bottom: none;
+        border-bottom-left-radius: 8px;
+        border-bottom-right-radius: 8px;
     }
+
 
     .col-name {
         flex: 1;
