--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 <head>
   <base target="_self">
+  <!-- Mobile Viewport Fix -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <!-- Material Design 3 -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet">
@@ -15,7 +18,7 @@
   <!-- App Bar -->
   <header class="md3-top-app-bar">
     <div class="md3-top-app-bar__content">
-      <h1 class="md3-headline-medium">Order Form v1.3.2</h1>
+      <h1 class="md3-headline-medium">Order Form v1.3.9</h1>
       <div id="header-total" class="md3-title-large" style="font-weight: bold;">Total: $0.00</div>
     </div>
   </header>
@@ -125,7 +128,7 @@
   <?!= include('js'); ?>
   <!-- Version Footer -->
   <div style="text-align: center; color: #aaa; font-size: 12px; padding: 20px;">
-    v1.3.2
+    v1.3.9
   </div>
 </body>
 
